--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -405,6 +405,13 @@ hr.major {
 	margin: 3em 0;
 }
 
+/* Rounded border */
+hr.minborder {
+	max-width: 400px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .align-left {
 	text-align: left;
 }
