--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2522,7 +2522,7 @@ input[type="radio"]:focus+label:before {
 
 .image.main {
 	display: block;
-	/* margin: 0 0 3em 0; */
+	margin: 0 0 1.25em 0;
 	width: 100%;
 }
 
