--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,13 +191,13 @@ html {
 body {
 	background-color: #4e9b83;
 	background-image: url("images/overlay.png"),
-		-moz-linear-gradient(45deg, #38813f 30%, #623a91 70%);
+		-moz-linear-gradient(45deg, #000000 30%, #000000 70%);
 	background-image: url("images/overlay.png"),
-		-webkit-linear-gradient(45deg, #38813f 30%, #623a91 70%);
+		-webkit-linear-gradient(45deg, #000000 30%, #000000 70%);
 	background-image: url("images/overlay.png"),
-		-ms-linear-gradient(45deg, #38813f 30%, #623a91 70%);
+		-ms-linear-gradient(45deg, #000000 30%, #000000 70%);
 	background-image: url("images/overlay.png"),
-		linear-gradient(45deg, #38813f 30%, #623a91 70%);
+		linear-gradient(45deg, #000000 30%, #000000 70%);
 }
 
 body.is-preload *,
@@ -3184,6 +3184,7 @@ table.alt tbody tr td {
 
 #header h1 {
 	margin: 0 0 0.25em 0;
+	font-family: Smallville;
 }
 
 #header p {
@@ -3316,13 +3317,13 @@ body.is-preload #header.alt .logo {
 		border-top-right-radius 0.2s ease, padding 0.2s ease;
 	transition: background-color 0.2s ease, border-top-left-radius 0.2s ease,
 		border-top-right-radius 0.2s ease, padding 0.2s ease;
-	background-color: #ffffff;
-	color: #636363;
+	background-color: #921c1c;
+	color: #ffffff;
 	position: absolute;
 	width: 64em;
 	max-width: calc(100% - 4em);
 	padding: 1em;
-	background-color: #f7f7f7;
+	background-color: #000000;
 	border-top-left-radius: 0.25em;
 	border-top-right-radius: 0.25em;
 	cursor: default;
@@ -3332,16 +3333,16 @@ body.is-preload #header.alt .logo {
 #nav input,
 #nav select,
 #nav textarea {
-	color: #636363;
+	color: #ffffff;
 }
 
 #nav a:hover {
-	color: #636363;
+	color: #ffffff;
 }
 
 #nav strong,
 #nav b {
-	color: #636363;
+	color: #000000;
 }
 
 #nav h1,
@@ -3350,7 +3351,7 @@ body.is-preload #header.alt .logo {
 #nav h4,
 #nav h5,
 #nav h6 {
-	color: #636363;
+	color: #ffffff;
 }
 
 #nav blockquote {
@@ -3406,7 +3407,7 @@ body.is-preload #header.alt .logo {
 }
 
 #nav ul li a.active {
-	background-color: #ffffff;
+	background-color: #000000;
 	box-shadow: none;
 }
 
@@ -3414,7 +3415,7 @@ body.is-preload #header.alt .logo {
 	position: fixed;
 	top: 0;
 	padding: 0.5em 1em;
-	background-color: rgba(247, 247, 247, 0.95);
+	background-color: rgba(0, 0, 0, 0.95);
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
 	z-index: 10000;
@@ -3441,24 +3442,24 @@ body.is-preload #header.alt .logo {
 /* Main */
 
 #main {
-	background-color: #ffffff;
-	color: #636363;
+	background-color: #000000b2;
+	color: #ffffff;
 	border-radius: 0.25em;
 }
 
 #main input,
 #main select,
 #main textarea {
-	color: #636363;
+	color: #ffffff;
 }
 
 #main a:hover {
-	color: #636363;
+	color: #ffffff;
 }
 
 #main strong,
 #main b {
-	color: #636363;
+	color: #ffffff;
 }
 
 #main h1,
@@ -3467,7 +3468,7 @@ body.is-preload #header.alt .logo {
 #main h4,
 #main h5,
 #main h6 {
-	color: #636363;
+	color: #ffffff;
 }
 
 #main blockquote {
@@ -3494,7 +3495,7 @@ body.is-preload #header.alt .logo {
 #main .button {
 	background-color: transparent;
 	box-shadow: inset 0 0 0 1px #dddddd;
-	color: #636363 !important;
+	color: #ffffff !important;
 }
 
 #main input[type="submit"]:hover,
@@ -3556,7 +3557,7 @@ body.is-preload #header.alt .logo {
 }
 
 #main label {
-	color: #636363;
+	color: #ffffff;
 }
 
 #main input[type="text"],
@@ -3582,13 +3583,13 @@ body.is-preload #header.alt .logo {
 }
 
 #main select option {
-	color: #636363;
+	color: #ffffff;
 	background: #ffffff;
 }
 
 #main input[type="checkbox"]+label,
 #main input[type="radio"]+label {
-	color: #636363;
+	color: #ffffff;
 }
 
 #main input[type="checkbox"]+label:before,
@@ -3599,8 +3600,8 @@ body.is-preload #header.alt .logo {
 
 #main input[type="checkbox"]:checked+label:before,
 #main input[type="radio"]:checked+label:before {
-	background-color: #636363;
-	border-color: #636363;
+	background-color: #ffffff;
+	border-color: #ffffff;
 	color: #ffffff;
 }
 
@@ -3640,7 +3641,7 @@ body.is-preload #header.alt .logo {
 
 #main .icon.alt {
 	border-color: #dddddd;
-	color: #636363;
+	color: #ffffff;
 }
 
 #main .icon.alt:hover {
@@ -3656,7 +3657,7 @@ body.is-preload #header.alt .logo {
 }
 
 #main dl dt {
-	color: #636363;
+	color: #ffffff;
 }
 
 #main header.major h2:after {
@@ -3665,6 +3666,7 @@ body.is-preload #header.alt .logo {
 	background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
 	background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
 	background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
+	width: auto;
 }
 
 #main table tbody tr {
@@ -3676,7 +3678,7 @@ body.is-preload #header.alt .logo {
 }
 
 #main table th {
-	color: #636363;
+	color: #ffffff;
 }
 
 #main table thead {
@@ -3697,7 +3699,6 @@ body.is-preload #header.alt .logo {
 
 #main>.main {
 	padding: 5em 5em 3em 5em;
-	border-top: solid 1px #dddddd;
 }
 
 #main>.main:first-child {
