--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3317,13 +3317,12 @@ body.is-preload #header.alt .logo {
 		border-top-right-radius 0.2s ease, padding 0.2s ease;
 	transition: background-color 0.2s ease, border-top-left-radius 0.2s ease,
 		border-top-right-radius 0.2s ease, padding 0.2s ease;
-	background-color: #921c1c;
 	color: #ffffff;
 	position: absolute;
 	width: 64em;
 	max-width: calc(100% - 4em);
 	padding: 1em;
-	background-color: #000000;
+	background-color: ##060708;
 	border-top-left-radius: 0.25em;
 	border-top-right-radius: 0.25em;
 	cursor: default;
@@ -3403,11 +3402,12 @@ body.is-preload #header.alt .logo {
 }
 
 #nav ul li a:hover {
-	background-color: rgba(222, 222, 222, 0.25);
+	background-color: #efa8b0;
 }
 
 #nav ul li a.active {
-	background-color: #000000;
+	background-color: #8cc9f0;
+	color:#ffffff;
 	box-shadow: none;
 }
 
@@ -3442,7 +3442,7 @@ body.is-preload #header.alt .logo {
 /* Main */
 
 #main {
-	background-color: #000000b2;
+	background-color: ##060708;
 	color: #ffffff;
 	border-radius: 0.25em;
 }
