--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,7 +216,7 @@ body.is-preload *:after {
 /* Type */
 
 body {
-	background-color: #935d8c;
+	background-color: #000000;
 	color: rgba(255, 255, 255, 0.65);
 }
 
